--- a/nubank-app/src/app/home/home.page.scss
+++ b/nubank-app/src/app/home/home.page.scss
@@ -1,27 +1,21 @@
-#container {
-  text-align: center;
+ion-header {
+  ion-toolbar{
+    --min-height: 100px;
+    ion-title {
+      align-items: flex-end;
+      img {
+        width: 45px;
+        vertical-align: middle;
+        margin-right: 10px;
+      }
 
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
-}
+      span {
+        font-size: 22px;
+      }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
-}
-
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+      ion-button{
+        display: block;
+      }
+    }
+  }
 }
